--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -811,9 +811,9 @@ section .container {
   font-weight: normal;
   color: white;
   background: #A19FFF;
-  font-size: 12px;
-  padding: 7px;
-  margin: 3px;
+  font-size: 11px;
+  padding: 6px;
+  margin: 1px 3px;
 }
 
 .tech-btn{
