--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -811,13 +811,14 @@ section .container {
   font-weight: normal;
   color: white;
   background: #A19FFF;
-  font-size: 11px;
+  font-size: 10px;
   padding: 6px;
   margin: 1px 3px;
 }
 
 .tech-btn{
-  margin: 10px
+  margin: 10px 0px;
+  padding: 0
 }
 
 .portfolio #portfolio-flters li:last-child {
